samples/_failures_safe/1761332413_96d78a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c202448.c: In function ‘print_stats’:
./samples/SAFE/__tmp_7c202448.c:138:9: error: expected declaration or statement at end of input
  138 |         case 2: max_severity_str = "INFO";
      |         ^~~~
./samples/SAFE/__tmp_7c202448.c:138:9: error: expected declaration or statement at end of input
